# CICD-TextStats

./: LICENSE  Makefile  README.md  TEST_OUTPUT.txt  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
scripts/: gen_coverage_badge.py
src/textstat_mini/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
