[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textstat-mini"
version = "0.2.0"
description = "Tiny CLI to compute simple text statistics (word counts, top words). Built to showcase CI/CD."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cli", "ci", "pytest", "ruff", "mypy", "coverage"]

[project.urls]
Homepage = "https://github.com/airdmhund1/CICD-TextStats"
Repository = "https://github.com/airdmhund1/CICD-TextStats"

[project.scripts]
textstat-mini = "textstat_mini.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
# Enforce coverage threshold; CI also passes flags explicitly
addopts = "-q --cov=src/textstat_mini --cov-report=term --cov-report=xml --cov-fail-under=90"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
